# gh-activity

./: CMakeLists.txt  LICENSE  README.md  compile_commands.json
src/: CMakeLists.txt  main.cc  main.cpp
src/cli/: cli.cpp  cli.hpp
src/github/: event_parser.cpp  github_api.cpp  github_api.hpp
src/models/: appState.hpp  event.hpp  repo.hpp
src/parser/: event_parser.cpp  event_parser.hpp  repo_parser.cpp  repo_parser.hpp
src/tui/: app.cpp  dashboard.cpp  ui.hpp
src/tui/repos/: components.hpp  headerComponent.cpp  loadingComponent.cpp  repoMenuComponent.cpp  repoPanel.cpp  searchComponent.cpp
src/utils/: formatter.cpp  formatter.hpp  http.cpp  http.hpp
